...
                    ForEach(activities){ activity in
                        Text(activity.title)
                            .swipeActions(edge: .leading, allowsFullSwipe: true){
                                Button{
                                    path.append(activity)
                                } label: {
                                    Label("Edit", systemImage: "square.and.pencil")
                                }
                                .tint(.yellow)
                            }
//                        NavigationLink(activity.title, value: activity)
                    }
                    .onDelete(perform: deleteActivity)
...
                    Button{
                        let blankActivity = Activity(title: "", detail: "")
                        modelContext.insert(blankActivity)
                        path = [blankActivity]
                    } label: {
                        Image(systemName: "plus")
                            .accessibilityLabel("createActivityButton")
                    }
                }
            }
            .navigationDestination(for: Activity.self) { activity in
                EditActivityView(activity: activity)
            }
...
