//
//  PickActivityView.swift
//  BehavioralActivation
//
//  Created by Peter Hartnett on 1/16/24.
//

import SwiftUI

struct PickActivityView: View {
    var body: some View {
        Button{
            _ = 1
        } label: {
            Text("Pick an Activity")
                .accessibilityLabel("pickActivityButton")
        }
    }
}

#Preview {
    PickActivityView()
}
